welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:2: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
  if (a/10==b/10 || a%10==b%10 || a/10=b%10 || a%10==b/10){return true} else {return false}} 
                               ^shareDigit:2: error: value || is not a member of Int
  if (a/10==b/10 || a%10==b%10 || a/10=b%10 || a%10==b/10){return true} else {return false}} 
                                            ^